[tool.poetry]
name = "integer-qomparator"
version = "0.1.0"
description = ""
authors = ["Kohpai <whcwhc78@gmail.com>"]
readme = "README.md"
packages = [{include = "integer_qomparator"}]

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "^0.41.1"
jupyter = "^1.0.0"
qiskit-aer = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
